# GameBoyEmu

./: .dockerignore  .gitignore  CMakeCacheold.txt  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  main.cpp  out.txt  run.sh  t  test.cpp  test.py  testp.cpp  updateInclude.py
.cmake/api/v1/reply/: cache-v2-9b3cd74a79a8c85448c8.json  cmakeFiles-v1-72d5dc82c905433bd018.json  codemodel-v2-7b45316e68e3fdc13de8.json  codemodel-v2-e2ea639e311cbd6e388b.json  index-2022-09-09T13-09-05-0333.json  index-2022-09-11T21-37-38-0553.json  target-main-befaeca961a7d12ee35d.json  target-main-dc8decdd245f61eb0e79.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
ROMS/cpu_instrs/individual/: passed_tests
ROMS/cpu_instrs/source/: 08-misc instrs.s
ROMS/cpu_instrs/source/common/: runtime.s
include/: background.h  clock.h  cpu.h  display_ctl.h  gb.h  gpu.h  layer.h  main.h  memory.h  modes.h  object.h  objects.h  pixel.h  pixel_fetcher.h  sprite.h  sprite_pixel.h  system_status.h  tiledata.h  timer.h  window.h
include/LD/: LD.h
include/Registers/: Registers.h
src/: CMakeLists.txt  background.cpp  clock.cpp  cpu.cpp  display_ctl.cpp  gb.cpp  gpu copy.rip  gpu.cpp  layer.cpp  main  main.cpp  memory.cpp  objects.cpp  pixel_fetcher.cpp  tiledata.cpp  timer.cpp  window.cpp
src/16_bit/BIT/: BIT.cpp
src/16_bit/ROTATE/: ROTATE.cpp
src/16_bit/SHIFT/: SHIFT.cpp
src/16_bit/SWAP/: SWAP.cpp
src/CALL/: CALL.cpp
src/INCDEC/: INCDEC.cpp
src/JUMP/: JUMP.cpp
src/LD/: LD.cpp
src/LOGIC/: LOGIC.cpp
src/MATH/: MATH.cpp
src/POPPUSH/: POPPUSH.cpp
src/RETURNS/: RETURNS.cpp
src/ROTATES/: ROTATES.cpp
src/RST/: RST.cpp
src/Registers/: Registers.cpp
test_project/: code.cpp  header.h  main.cpp
tests/: CMakeLists.txt  test.cpp
